--- a/package.json
+++ b/package.json
@@ -9,8 +9,12 @@
   "author": "corbe19",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.17.3",
-    "mongoose": "^6.2.10",
-    "ws": "^8.5.0"
+    "bcrypt": "^5.1.0",
+    "cookie-parser": "^1.4.6",
+    "express": "^4.18.2",
+    "mongodb": "^4.12.0",
+    "uuid": "^9.0.0"
   }
+  
+  
 }
