--- a/package.json
+++ b/package.json
@@ -1,21 +1,17 @@
 {
-  "name": "flip-startup",
-  "version": "1.0.0",
-  "description": "flip main package",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+  "devDependencies": {
+    "vite": "^5.2.8"
   },
-  "author": "corbe19",
-  "license": "MIT",
+  "scripts": {
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
+  },
   "dependencies": {
-    "bcrypt": "^5.1.0",
-    "cookie-parser": "^1.4.6",
-    "express": "^4.18.2",
-    "mongodb": "^4.12.0",
-    "uuid": "^9.0.0",
-    "ws": "^8.12.0"
+    "bootstrap": "^5.3.3",
+    "react": "^18.2.0",
+    "react-bootstrap": "^2.10.2",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.22.3"
   }
-  
-  
 }
